--- a/index.html
+++ b/index.html
@@ -1596,11 +1596,80 @@ h1 {
   });
   </script>
 
-
+<!-- Anti-Screenshot Protection -->
+<script>
+(function() {
+  // Blur content when page loses focus (potential screenshot)
+  let blurOverlay = null;
+  
+  const createBlurOverlay = function() {
+    if (blurOverlay) return;
+    blurOverlay = document.createElement('div');
+    blurOverlay.id = 'screenshot-protection';
+    blurOverlay.style.cssText = 'position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.95);z-index:999999;display:flex;align-items:center;justify-content:center;font-family:sans-serif;color:white;font-size:24px;text-align:center;padding:20px;';
+    blurOverlay.innerHTML = '<div><h2>Content Protected</h2><p style="font-size:16px;opacity:0.8;">Screenshots are not allowed on this page.</p></div>';
+    document.body.appendChild(blurOverlay);
+  };
+  
+  const removeBlurOverlay = function() {
+    if (blurOverlay) {
+      blurOverlay.remove();
+      blurOverlay = null;
+    }
+  };
+  
+  // Detect visibility change (switching apps, screenshot tools)
+  document.addEventListener('visibilitychange', function() {
+    if (document.hidden) {
+      createBlurOverlay();
+    } else {
+      setTimeout(removeBlurOverlay, 500);
+    }
+  });
+  
+  // Detect window blur
+  window.addEventListener('blur', function() {
+    createBlurOverlay();
+  });
+  
+  window.addEventListener('focus', function() {
+    setTimeout(removeBlurOverlay, 300);
+  });
+  
+  // Block PrintScreen key
+  document.addEventListener('keyup', function(e) {
+    if (e.key === 'PrintScreen') {
+      navigator.clipboard.writeText('');
+      createBlurOverlay();
+      setTimeout(removeBlurOverlay, 1000);
+      alert('Screenshots are disabled on this page.');
+    }
+  });
+  
+  // Detect screen capture API (modern browsers)
+  if (navigator.mediaDevices && navigator.mediaDevices.getDisplayMedia) {
+    const originalGetDisplayMedia = navigator.mediaDevices.getDisplayMedia;
+    navigator.mediaDevices.getDisplayMedia = function() {
+      alert('Screen capture is not allowed on this page.');
+      return Promise.reject(new Error('Screen capture blocked'));
+    };
+  }
+})();
+</script>
+<style>
+  /* Additional CSS protection */
+  body {
+    -webkit-touch-callout: none;
+  }
+  @media print {
+    body { display: none !important; }
+  }
+</style>
     
 </body>
 
 </html>
+
 
 
 
